# NcEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CppProperties.json  Cube.nca  Folder.DotSettings  LICENSE  NCEngine.cpp  README.md  TODO.txt  Win32Platform.cpp  analysis.txt  c_cpp_properties.json  copytest.cpp  imgui.ini  launch.json  readme.md  run_cmake.bat  run_make.bat  settings.json  swap.cpp  tasks.json  test.cpp  tf_test.cpp  todo.txt  vk_layer_settings.txt  vk_swiftshader_icd.json
editor/: CMakeLists.txt  CMakePresets.json  EditorManager.cpp  EditorManager.h  config.ini
editor/config/: editor_config.ini  engine_config.ini
editor/file_templates/: Main.cpp  ProjectFile.ncproj  RootCMakeLists.txt  build.bat  config.ini
editor/source/: CMakeLists.txt  EditorConfig.cpp  EditorConfig.h  EditorScene.cpp  EditorScene.h  SceneNavigationCamera.h  main.cpp
nc/: CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.h  Common.h  Component.h  Entity.cpp  Entity.h  EntityView.cpp  EntityView.h  NCE.cpp  NCE.h  NcEngineConfig.cmake  PCH.h  PointLightData.txt  ProjectSettings.cpp  ProjectSettings.h  Renderer.h  Transform.h  Window.cpp  Window.h
nc/component/: CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  EngineComponentGroup.h  PointLight.cpp  PointLight.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
nc/config/: CMakeLists.txt  Config.cpp  Config.h
nc/debug/: NCException.h  NCUtils.h
nc/engine/: CMakeLists.txt  CollisionSystem.cpp  ComponentManager.h  ComponentSystem.h  Engine.cpp  Engine.h  EntitySystem.h  HandleManager.h  LightSystem.cpp  LightSystem.h  RenderingSystem.cpp  RenderingSystem.h  TransformSystem.h
nc/graphics/: CMakeLists.txt  DXException.h  Graphics.cpp  Graphics.h  Material.h  MaterialType.h  Mesh.cpp  Mesh.h  MeshType.h  Model.cpp  Model.h  PBRMaterial.cpp  PBRMaterial.h  PointLight.cpp  PointLight.h  Shader.h  WICTextureLoader.cpp  WICTextureLoader.h
nc/include/: Assets.h  Audio.h  AudioSystem.h  Core.h  DebugUtils.h  ECS.h  EditorMeta.h  Engine.h  EngineModule.h  Entity.h  EntityHandle.h  Input.h  Key.h  MainCamera.h  Module.h  NcAll.h  NcCamera.h  NcCommon.h  NcCommonTypes.h  NcConfig.h  NcDebug.h  NcEngine.h  NcLog.h  NcMath.h  NcPhysics.h  NcScene.h  NcScreen.h  NcUI.h  NcWindow.h  Network.h  Physics.h  Profile.h  Profiler.h  Scene.h  SceneManager.h  UI.h  Window.h  audio_module.h  engine_module.h  graphics_module.h  (+1 more)
nc/input/: CMakeLists.txt  Input.cpp  Input.h
nc/math/: CMakeLists.txt  MathNCE.h  NCVector.h  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
nc/scene/: CMakeLists.txt  Scene.h  SceneManager.cpp  SceneManager.h
nc/source/: CMakeLists.txt  NcInterface.cpp
nc/test/: CMakeLists.txt
nc/time/: CMakeLists.txt  NCTime.cpp  NCTime.h
nc/utils/: CMakeLists.txt
nc/views/: CMakeLists.txt  EntityView.cpp  EntityView.h  View.h
nc/win32/: CMakeLists.txt  NCWin32.h  NCWinDef.h  WinMain.cpp  Window.cpp  Window.h
project/: CMakeLists.txt  CMakePresets.json  CavernaMain.cpp  SampleMain.cpp  ServerMain.cpp  WinMain.cpp  config.ini
project/Components/: BoarMover.cpp  BoarMover.h  CamController.cpp  CamController.h  ClickHandler.cpp  ClickHandler.h  CollisionLogger.h  ConstantRotation.h  CubeRotator.cpp  CubeRotator.h  DebugComponents.cpp  DebugComponents.h  DebugUtils.cpp  DebugUtils.h  EdgePanCamera.cpp  EdgePanCamera.h  FrameTimer.cpp  FrameTimer.h  GamePiece.cpp  GamePiece.h  Head.cpp  Head.h  MouseFollower.cpp  MouseFollower.h  PlayerConnection.cpp  PlayerConnection.h  Point.cpp  Point.h  Sample.cpp  Sample.h  Ship.cpp  Ship.h  Spawner.cpp  Spawner.h  Tail.cpp  Tail.h  Timer.cpp  Timer.h  WasdController.h
project/Models/: BoarPiece.fbx  CattlePiece.fbx  CoalPiece.fbx  Cube.fbx  DiningRoomTable.fbx  DogPiece.fbx  DonkeyPiece.fbx  FurnishingTile.fbx  GrainPiece.fbx  MeshTypeCube.h  MeshTypeMonkey.h  PlayerBoard.fbx  SheepPiece.fbx  StablePiece.fbx  StonePiece.fbx  VegetablePiece.fbx  WoodPiece.fbx  capsule.fbx  newSphere.nca  plane.fbx  ramp.fbx  skeeball.fbx  worm.fbx
project/Scenes/: InitialScene.cpp  InitialScene.h  TestScene.cpp  TestScene.h
project/Settings/: projectsettings.txt
project/Shaders/: Environment.vert  Particle.frag  Particle.vert  Phong.frag  Phong.vert  PhongPixelShader.hlsl  ShadowMapping.vert  Wireframe.frag  WireframePixelShader.hlsl  WireframeVertexShader.hlsl  basicPbr.frag
project/config/: CMakeLists.txt  ProjectConfig.cpp  ProjectConfig.h  config.ini  graphics.ini  physics.ini  player.ini  project.ini  servers.ini
project/scenes/: DemoScene.cpp  DemoScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  SceneHelper.h  SpawnTest.cpp  SpawnTest.h  VulkanScene.cpp  VulkanScene.h
project/shaders/: LitPixel.hlsl  PBRPixelShader.hlsl  PBRVertexShader.hlsl  PixelShader.hlsl
project/source/: CMakeLists.txt  Prefabs.cpp  Prefabs.h
project/ui/: EditNameUIElement.cpp  EditNameUIElement.h  HUD.cpp  HUD.h  LogUIElement.cpp  LogUIElement.h  UI.cpp  UIElement.h
sample/: CMakeLists.txt  CMakePresets.json  config.ini  smoke_test_config.ini  vk_layer_settings.txt
sample/Models/: snail.fbx
sample/assets/: manifest.json
sample/models/: planet.fbx
sample/source/: CMakeLists.txt  SampleMain.cpp
sdk/editor/: CMakeLists.txt
sdk/engine/: CMakeLists.txt  CMakePresets.json
sdk/sample/: CMakeLists.txt  SampleMain.cpp  config.ini
sdk/test/: CMakeLists.txt
sdk/tools/: CMakeLists.txt  NcTools.cpp  shaders.ps1  tasks.json  tasks.vs.json
source/editor/: CMakeLists.txt  EditorScene.cpp  EditorScene.h  Main.cpp  NcEditor.cpp  NcEditor.h
source/engine/: CMakeLists.txt
source/ncasset/: CMakeLists.txt  Deserialize.cpp  Deserialize.h  Import.cpp  NcaHeader.cpp
source/ncconvert/: CMakeLists.txt  Config.h  Main.cpp  ReturnCodes.h
source/ncmath/: CMakeLists.txt  Quaternion.cpp
source/ncutility/: CMakeLists.txt  Compression.cpp
test/: AssetServiceStub.h  CMakeLists.txt  CMakePresets.json  sampletest.cpp
test/alloc/: CMakeLists.txt  MemoryResource_unit_tests.cpp
test/asset/: AssetId_tests.cpp  AssetUtilities_tests.cpp  (+9 more)
(+3508 files in other folders)
