add_subdirectory(api_implementation)
add_subdirectory(camera)
add_subdirectory(component)
add_subdirectory(config)
add_subdirectory(ecs)
add_subdirectory(engine)
add_subdirectory(graphics)
add_subdirectory(input)
add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(physics)
add_subdirectory(scene)
add_subdirectory(time)
add_subdirectory(ui)
add_subdirectory(window)